--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
-#header{
+h1 {
     color: red;
     text-align: center;
 }
 
-h4{
+h4 {
     text-align: center;
 }
 
+
+div {
+    background-image: url(cover.jpg);
+    background-size: cover;
+
+}
