change background colour

--- a/style.css
+++ b/style.css
@@ -19,6 +19,6 @@ img {
 }
 
 
-body {
-    background: linear-gradient(to right, #2e2b2b 10%, #25425e 50%); /* Set background gradient */
-}
+/* body {
+    background: linear-gradient(to right, #2e2b2b 10%, #25425e 50%); Set background gradient 
+} */
