--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
+/* color link: https://coolors.co/palette/000000-14213d-fca311-e5e5e5-ffffff */
+
 :root {
     --primary-color: #FFFFFF;
     --secondary-color: #E5E5E5;
     --accent1-color: #FCA311;
     --accent2-color: #14213D;
+    --accent3-color: #219ebc;
+    --accent4-color: #8ecae6;
 
     --heading-font: 'play display', serif;
     --paragraph-font: 'open sans', serif;
@@ -15,6 +19,10 @@
     --nav-hover-background-color: #FCA311;
 }
 
+
+body {
+    color: var(--primary-color);
+}
 
 .container {
     display: flex;
