--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,13 @@
     --nav-hover-background-color: #FC311; */
 }
 
+/* header {
+    display: flex;
+    gap: 3em;
+    justify-content: right;
+    background-color: var(--accent3-color);
+} */
+
 nav {
     margin: 0;
     padding: 0;
@@ -30,6 +37,9 @@ body {
     margin: 0;
 }
 
+#space {
+    display: none;
+}
 .menu-list {
     display: block;
     background-color: #eee;
@@ -57,11 +67,13 @@ a {
     background-color: var(--accent3-color);
     margin: 0;
     padding: 0;
+
 }
 
 .navigation li {
     display: block;
     padding: 0.5em;
+    align-self: center;
 }
 
 .navigation a:hover {
